public enum WeaponAnimationType
{
    Idle,
    Show,
    Shot,
    Reload,
    Run,
    Scope,
    Granade,
    Idlegrenade,
    HandWeaponHit,
    HandWeaponRun,
    HandWeaponIdle,
    HandWeaponShow,
    PistolShow,
    PistolRun,
    PistolIdle,
    PistolReload,
    PistolScope,
    PistolShot,
    PistolIsReload,
    
}

public enum CharacterAnimationType
{
    Show,
    Idle,
    Walk,
    Attack,
}